--- a/plugins/experience-decisioning/package.json
+++ b/plugins/experience-decisioning/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@adobe/franklin-experience-decisioning",
+  "name": "@adobe/aem-experience-decisioning",
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
@@ -9,12 +9,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/adobe/franklin-experience-decisioning.git"
+    "url": "git+ssh://git@github.com/adobe/aem-experience-decisioning.git"
   },
   "author": "Adobe Inc.",
   "license": "Apache-2.0",
   "keywords": [
-    "franklin",
+    "aem",
     "experimentation",
     "experience",
     "decisioning",
@@ -23,10 +23,11 @@
     "audiences"
   ],
   "bugs": {
-    "url": "https://github.com/adobe/franklin-experience-decisioning/issues"
+    "url": "https://github.com/adobe/aem-experience-decisioning/issues"
   },
-  "homepage": "https://github.com/adobe/franklin-experience-decisioning#readme",
+  "homepage": "https://github.com/adobe/aem-experience-decisioning#readme",
   "devDependencies": {
+    "@babel/eslint-parser": "7.22.15",
     "eslint": "8.48.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.28.1",
