--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -1,25 +1,21 @@
 {
-  "project": "XSC Demo",
+  "project": "WKND",
   "plugins": [
     {
       "id": "library",
       "title": "Library",
-      "environments": [ "dev", "edit" ],
-      "url": "https://main--xsc-wknd--hlxsites.hlx.page/tools/sidekick/library.html",
+      "environments": [ "edit" ],
+      "url": "https://main--wknd--hlxsites.hlx.live/tools/sidekick/library.html",
       "includePaths": [ "**.docx**" ]
     },
     {
       "id": "asset-library",
-      "title": "AEM Assets Library",
-      "environments": [
-        "edit"
-      ],
-      "url": "https://experience.adobe.com/solutions/CQ-assets-selectors/static-assets/resources/franklin/asset-selector.html",
+      "title": "My Assets",
+      "environments": [ "edit" ],
+      "url": "https://experience.adobe.com/solutions/CQ-assets-selectors/static-assets/resources/franklin/asset-selector.html?rail=false",
       "isPalette": true,
-      "includePaths": [
-        "**.docx**"
-      ],
-      "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:400px; height: calc(100vh - 60px)"
+      "includePaths": [ "**.docx**" ],
+      "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:800px; height: calc(100vh - 60px)"
     }
   ]
 }
