--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -16,6 +16,17 @@
       "isPalette": true,
       "includePaths": [ "**.docx**" ],
       "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:800px; height: calc(100vh - 60px)"
+    },
+
+    / Generate Variations plugin
+    {
+      "id": "generate-variations",
+      "title": "Generate Variations",
+      "url": "https://experience.adobe.com/aem/generate-variations",
+      "passConfig": true,
+      "environments": [“preview”,”live”, "edit"],
+      "includePaths": ["**.docx**"]
     }
+    
   ]
 }
