--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -24,7 +24,7 @@
       "title": "Generate Variations",
       "url": "https://experience.adobe.com/aem/generate-variations",
       "passConfig": true,
-      "environments": [“preview”,”live”, "edit"],
+      "environments": ["preview","live", "edit"],
       "includePaths": ["**.docx**"]
     }
     
